# underwriter

./: .gitignore  DESCRIPTION  NAMESPACE  NAMESPACE.old  README.md  pyproject.toml
R/: RcppExports.R  check_claim.R  check_claim_1st.R  check_claim_kcd.R  check_claim_ratio.R  check_claim_rider.R  check_claim_year.R  check_first_claim.R  chk_clm.R  chk_clm_1st.R  chk_clm_kcd.R  chk_clm_mon.R  chk_clm_rat.R  chk_clm_rdr.R  chk_clm_yrs.R  chk_prm.R  chk_prm_cnt.R  clm_sim.R  clm_sim_hos.R  clm_sim_sur_grd.R  cmb_clm_1st.R  cst_unq_kcd.R  cut_age.R  elapsed_day.R  etc.R  first_claim.R  get_id_with_kcd.R  get_kcd.R  prm_sim.R  spl_hos_day.R  spl_unq_kcd.R  srch_kcd.R  stat_kcd.R  uniq_hos_day.R  unq_hos_day.R  unq_sur_cnt.R
data/: clm_book.rda  kcd_book.rda  lap_book.rda  rsk_book.rda
examples/notebooks/: 01.ICIS-Claim-Data-Processing.ipynb
examples/notebooks/data/: claim.csv  main.csv
man/: check_claim.Rd  check_claim_1st.Rd  check_claim_kcd.Rd  check_claim_ratio.Rd  check_claim_rider.Rd  check_claim_year.Rd  check_first_claim.Rd  chk_clm.Rd  chk_clm_1st.Rd  chk_clm_kcd.Rd  chk_clm_mon.Rd  chk_clm_rat.Rd  chk_clm_rdr.Rd  chk_clm_yrs.Rd  chk_prm.Rd  chk_prm_cnt.Rd  clm_sim.Rd  clm_sim_hos.Rd  clm_sim_sur_grd.Rd  cmb_clm_1st.Rd  cst_unq_kcd.Rd  cut_age.Rd  elapsed_day.Rd  first_claim.Rd  get_id_with_kcd.Rd  get_kcd.Rd  prm_sim.Rd  spl_hos_day.Rd  spl_unq_kcd.Rd  srch_kcd.Rd  stat_kcd.Rd  stat_kcd_rat.Rd  uniq_hos_day.Rd  unq_hos_day.Rd  unq_sur_cnt.Rd
src/: RcppExports.cpp  rcpp_first_claim.cpp  rcpp_uniq_day.cpp  rcpp_unique_day.cpp  uniq_day.cpp
src/underwriter/: __init__.py  _types.py  datasets.py  errors.py  sentinels.py
src/underwriter/_kernels/: __init__.py  band.py  combine.py  io.py  kcd.py  months.py  stay.py  tokens.py  window.py
src/underwriter/_plot/: __init__.py  decision.py  relaxation.py  theme.py
src/underwriter/diagnostics/: __init__.py  icis.py  relaxation.py  ruleset.py
src/underwriter/engine/: __init__.py  decision.py  match.py  (+1 more)
tests/: test_clean.py  test_datasets.py  test_engine.py  test_grammar_edges.py  test_kernels.py  test_match.py  test_pipeline.py  test_plot.py
(+11 files in other folders)
