[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "underwriter"
version = "0.1.0"
authors = [
    { name = "Seokhoon Joo", email = "seokhoonj@gmail.com" },
]
description = "The automated underwriter for Korean life insurance industry"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.0",
    "pandas>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/seokhoonj/underwriter"

